--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 .container {
     display: grid;
     grid-template-columns: minmax(230px, 250px) 1fr;
+    background: #F7F8FC; 
 }
 
 
@@ -65,4 +66,127 @@
     color: #9496a5;
     text-decoration: none;
 }
+
+/* Main container */
+
+
+.main-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: auto auto 1fr auto;
+    padding: 0 24px;
+    gap: 16px;
+}
+
+.main-container > div {
+    background-color: white;
+}
+
+/* main - header */
+
+.main-header {
+    grid-column: 1/9;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.main-header-menu {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    gap: 16px;
+}
+
+h1 {
+    font-size: 21px;
+}
+
+.main-header-menu-icons {
+    border-right: 1.5px solid #d2d4da67;
+    padding-right: 8px;
+    margin-right: 24px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    color: #c5c7cD;
+}
+
+.main-header-menu-icons i {
+    margin-right: 16px;
+}
+
+.main-header-menu p {
+    font-size: 14px;
+    color: #252733;
+}
+
+.main-header img {
+    width: 42px;
+    border-radius: 100px;
+}
+
+
+/* main - stats */
+
+.main-stats-open {
+    grid-column: 1/3;
+}
+.main-stats-unresolved {
+    grid-column: 3/5;
+}
+.main-stats-onhold {
+    grid-column: 5/7;
+}
+.main-stats-overdue {
+    grid-column: 7/9;
+}
+
+.main-stats-overdue,
+.main-stats-onhold,
+.main-stats-unresolved,
+.main-stats-open {
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+    padding: 1.3rem 0;
+    gap: 8px;
+    border: 2px solid #d2d4da9b;
+    border-radius: 6px;
+    background: #fff;
+}
+
+.main-container > div > h3 {
+    font-size: 18px;
+    color: #9fa2b4;
+}
+
+.main-container > div > p {
+    font-size: 36px;
+    color: rgb(37, 39, 51);
+    font-weight: 700;
+}
+
+
+/* main - trends */
+
+.main-trends {
+    grid-column: 1/9;
+}
+
+
+/* main - unresolved tickets */
+
+.main-unresolved-tickets {
+    grid-column: 1/5;
+}
+
+
+/* main - resolved tickets */
+
+.main-resolved-tickets {
+    grid-column: 5/9;
+}
+
 
