--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 }
 
 /* Main */
+body {
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 
 .container {
     display: grid;
